Tag Browser: Handle width on mobile despite positoin: fixed hacks

--- a/src/styles/components/_tag-browser.component.sass
+++ b/src/styles/components/_tag-browser.component.sass
@@ -210,3 +210,6 @@ tag-browser
       .overview
         display: block
         padding-top: 0
+
+    .main-tag-list
+      width: auto !important // override any width added by JS for handling fixed sidebar
